--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -15,5 +15,4 @@ spring:
 #    open-in-view: false
 
 logging.level:
-  org.hibernate.SQL: debug
-#  org.hibernate.type: trace
+  org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6
