--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8081
+
 spring:
   datasource:
     url: jdbc:h2:tcp://localhost/~/jpashop
@@ -14,5 +17,4 @@ spring:
         format_sql: true
 
 logging.level:
-  org.hibernate.SQL: debug
-#  org.hibernate.type: trace
+  org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6
