--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,4 +17,5 @@ spring:
         format_sql: true
 
 logging.level:
-  org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6
+  org.hibernate.SQL: debug
+#  org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6, p6spy(외부 라이브러리) 사용으로 주석처리
