--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// 운영배포 시 성능 테스트 필요함 -> 개발 시엔 OK
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta' //
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
@@ -33,8 +36,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	// 운영배포 시 성능 테스트 필요함 -> 개발 시엔 OK
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+
 
 }
 
